[gd_scene load_steps=2 format=3 uid="uid://bujhj1275wctf"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_tx0v3"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tx0v3")

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = 501.0
offset_top = 185.0
offset_right = 653.0
offset_bottom = 360.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume
"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MuteCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Display : Resolution"

[node name="ResolutionDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BACK"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MuteCheckBox" to="." method="_on_mute_check_box_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ResolutionDropdown" to="." method="_on_resolution_dropdown_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_quit_button_pressed"]
